dfir_rs/tests/compile-fail-stable/surface_anti_join_badtypes.stderr
error[E0271]: type mismatch resolving `<ForEach<{closure@surface_anti_join_badtypes.rs:4:18}, {integer}> as Pusherator>::Item == &str`
 --> tests/compile-fail-stable/surface_anti_join_badtypes.rs:5:13
  |
5 |         j = anti_join() -> for_each(std::mem::drop);
  |             ^^^^^^^^^ expected `&str`, found integer
  |
note: required by a bound in `pivot_run_sg_2v1`
 --> tests/compile-fail-stable/surface_anti_join_badtypes.rs:5:13
  |
5 |         j = anti_join() -> for_each(std::mem::drop);
  |             ^^^^^^^^^ required by this bound in `pivot_run_sg_2v1`
